[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/object_avengerShop.gd" type="Script" id=1]
[ext_resource path="res://sprites/gui/Store1.png" type="Texture" id=2]
[ext_resource path="res://sprites/gui/buybar.png" type="Texture" id=3]
[ext_resource path="res://sprites/gui/buybarOver.png" type="Texture" id=4]
[ext_resource path="res://sprites/gui/buybarInside.png" type="Texture" id=5]
[ext_resource path="res://fontes/PixelOperator.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/objects/buy_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/avengers/Capitao.png" type="Texture" id=8]
[ext_resource path="res://sprites/avengers/IronMan.png" type="Texture" id=9]
[ext_resource path="res://sprites/avengers/Hulk.png" type="Texture" id=10]
[ext_resource path="res://sprites/avengers/Thor.png" type="Texture" id=11]
[ext_resource path="res://sprites/avengers/Gaviao.png" type="Texture" id=12]
[ext_resource path="res://sprites/avengers/Viuva.png" type="Texture" id=13]
[ext_resource path="res://sprites/objects/btnClose.png" type="Texture" id=14]
[ext_resource path="res://sprites/objects/btnClose_press.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[node name="object_avengerShop" type="Node2D"]
pause_mode = 2
z_index = 1
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="levelBars" type="Node2D" parent="."]
editor/display_folded = true

[node name="up0" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = -169.0
margin_right = 118.0
margin_bottom = -139.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="up1" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = -103.0
margin_right = 118.0
margin_bottom = -73.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="up2" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = -37.0
margin_right = 118.0
margin_bottom = -7.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="up3" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = 29.0
margin_right = 118.0
margin_bottom = 59.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="up4" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = 95.0
margin_right = 118.0
margin_bottom = 125.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="up5" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = 161.0
margin_right = 118.0
margin_bottom = 191.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="up6" type="TextureProgress" parent="levelBars"]
margin_left = -118.0
margin_top = 227.0
margin_right = 118.0
margin_bottom = 257.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="labels" type="Node2D" parent="."]
editor/display_folded = true

[node name="price0" type="Label" parent="labels"]
margin_left = -20.0
margin_top = -187.0
margin_right = 18.0
margin_bottom = -171.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="price1" type="Label" parent="labels"]
margin_left = -20.0
margin_top = -121.0
margin_right = 18.0
margin_bottom = -105.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="price2" type="Label" parent="labels"]
margin_left = -20.0
margin_top = -55.0
margin_right = 18.0
margin_bottom = -39.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="price3" type="Label" parent="labels"]
margin_left = -20.0
margin_top = 11.0
margin_right = 18.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="price4" type="Label" parent="labels"]
margin_left = -20.0
margin_top = 77.0
margin_right = 18.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="price5" type="Label" parent="labels"]
margin_left = -20.0
margin_top = 143.0
margin_right = 18.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="price6" type="Label" parent="labels"]
margin_left = -20.0
margin_top = 209.0
margin_right = 18.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1
valign = 1

[node name="buy_button0" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, -181 )

[node name="buy_button1" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, -115 )

[node name="buy_button2" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, -49 )

[node name="buy_button3" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, 17 )

[node name="buy_button4" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, 83 )

[node name="buy_button5" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, 149 )

[node name="buy_button6" parent="." instance=ExtResource( 7 )]
position = Vector2( 135, 215 )

[node name="avengers" type="Node2D" parent="."]
editor/display_folded = true

[node name="a1" type="Sprite" parent="avengers"]
position = Vector2( -156, -101 )
texture = ExtResource( 8 )
vframes = 3
hframes = 3

[node name="a2" type="Sprite" parent="avengers"]
position = Vector2( -155, -34 )
texture = ExtResource( 9 )
vframes = 3
hframes = 3

[node name="a3" type="Sprite" parent="avengers"]
position = Vector2( -156, 31 )
texture = ExtResource( 10 )
vframes = 3
hframes = 3

[node name="a4" type="Sprite" parent="avengers"]
position = Vector2( -156, 99 )
texture = ExtResource( 11 )
vframes = 3
hframes = 3

[node name="a5" type="Sprite" parent="avengers"]
position = Vector2( -157, 164 )
texture = ExtResource( 12 )
vframes = 3
hframes = 3

[node name="a6" type="Sprite" parent="avengers"]
position = Vector2( -157, 231 )
texture = ExtResource( 13 )
vframes = 3
hframes = 3

[node name="close" type="TouchScreenButton" parent="."]
position = Vector2( 160, -250 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )

[node name="coins" type="Label" parent="."]
margin_left = -144.173
margin_top = -245.536
margin_right = -88.173
margin_bottom = -213.536
custom_fonts/font = SubResource( 2 )
text = "0000"
align = 2
valign = 1

[connection signal="released" from="close" to="." method="_on_close_released"]
